--- a/photo_project/index.html
+++ b/photo_project/index.html
@@ -8,43 +8,44 @@
   <body>
       <div class="grid">
         <div class="grid-item">
-            <img src="https://farm6.staticflickr.com/5675/21524463166_f11afc7a30_o.jpg" alt="" />
+            <img src="https://farm6.staticflickr.com/5675/21524463166_03b2c0d1d9_m.jpg" alt="" />
               <p>
                 New York
               </p>
           </div>
           <div class="grid-item grid-item--width2">
-            <img src="https://farm1.staticflickr.com/762/20778664824_1e172d4c67_o.jpg" alt="" />
+            <img src="https://farm1.staticflickr.com/762/20778664824_dcb42e703d_m.jpg" alt="" />
+              <p>
+                Japan
+              </p>
+          </div>
+          <div class="grid-item grid-item--height3">
+            <img src="https://farm6.staticflickr.com/5627/21401373015_40e71d5da4_m.jpg" alt="" />
               <p>
                 Japan
               </p>
           </div>
           <div class="grid-item grid-item--height2">
-            <img src="https://farm6.staticflickr.com/5627/21401373015_1df297a4da_o.jpg" alt="" />
+            <img src="https://farm1.staticflickr.com/751/21212839779_84eb6000f6_m.jpg" alt="" />
               <p>
                 Japan
               </p>
           </div>
-          <div class="grid-item grid-item--width2">
-            <img src="https://farm1.staticflickr.com/708/21388890072_a6637d97b9_o.jpg" alt="" />
+          <div class="grid-item grid-item--width3">
+            <img src="https://farm6.staticflickr.com/5737/21373522016_0687e5dc6a_m.jpg" alt="" />
               <p>
                 Japan
               </p>
           </div>
           <div class="grid-item">
-            <img src="https://farm1.staticflickr.com/751/21212839779_90f74f1cc6_o.jpg" alt="" />
-              <p>
-                Japan
-              </p>
-          </div>
-          <div class="grid-item grid-item--width2">
-            <img src="https://farm6.staticflickr.com/5712/21211896678_ed520710da_o.jpg" alt="" />
+            <img src="https://farm6.staticflickr.com/5712/21211896678_8556430e52_m.jpg" alt="" />
               <p>
                 Japan
               </p>
           </div>
         </div>
       </div>
+      <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
       <script src="/path/to/masonry.pkgd.min.js"></script>
       <script src="script.js"></script>
   </body>
