--- a/photo_project/index.html
+++ b/photo_project/index.html
@@ -2,51 +2,128 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <title>Portpholio</title>
   </head>
   <body>
+    <div class="container">
+
+        <h1>Travel Junkie</h1>
+
+
       <div class="grid">
         <div class="grid-item">
-            <img src="https://farm6.staticflickr.com/5675/21524463166_03b2c0d1d9_m.jpg" alt="" />
-              <p>
-                New York
-              </p>
-          </div>
-          <div class="grid-item grid-item--width2">
-            <img src="https://farm1.staticflickr.com/762/20778664824_dcb42e703d_m.jpg" alt="" />
-              <p>
-                Japan
-              </p>
-          </div>
-          <div class="grid-item grid-item--height3">
-            <img src="https://farm6.staticflickr.com/5627/21401373015_40e71d5da4_m.jpg" alt="" />
-              <p>
-                Japan
-              </p>
+          <a href="https://www.flickr.com/photos/eclecticfunk/21524463166/"><img src="https://farm6.staticflickr.com/5675/21524463166_03b2c0d1d9_n.jpg" alt="" />
+            <p>
+              New York
+            </p>
+          </a>
+
           </div>
           <div class="grid-item grid-item--height2">
-            <img src="https://farm1.staticflickr.com/751/21212839779_84eb6000f6_m.jpg" alt="" />
+            <a href="https://flic.kr/p/xE968N"><img src="https://farm1.staticflickr.com/762/20778664824_dcb42e703d_n.jpg" alt="" />
               <p>
-                Japan
+                Tokyo
               </p>
+            </a>
+
           </div>
-          <div class="grid-item grid-item--width3">
-            <img src="https://farm6.staticflickr.com/5737/21373522016_0687e5dc6a_m.jpg" alt="" />
+          <div class="grid-item grid-item--height3">
+            <a href="https://flic.kr/p/yBaCzV"><img src="https://farm6.staticflickr.com/5627/21401373015_40e71d5da4_n.jpg" alt="" />
               <p>
-                Japan
+                Tokyo
               </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height3">
+            <a href="https://flic.kr/p/yjvmdT"><img src="https://farm1.staticflickr.com/751/21212839779_84eb6000f6_n.jpg" alt="" />
+              <p>
+                Tokyo
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height2">
+            <a href="https://flic.kr/p/yyGTsh"><img src="https://farm6.staticflickr.com/5737/21373522016_0687e5dc6a_n.jpg" alt="" />
+              <p>
+                Tokyo
+              </p>
+            </a>
+
           </div>
           <div class="grid-item">
-            <img src="https://farm6.staticflickr.com/5712/21211896678_8556430e52_m.jpg" alt="" />
+            <a href="https://flic.kr/p/yjqvSw"><img src="https://farm6.staticflickr.com/5712/21211896678_8556430e52_n.jpg" alt="" />
               <p>
-                Japan
+                Tokyo
               </p>
+            </a>
+
+          </div>
+          <div class="grid-item">
+            <a href="https://flic.kr/p/yjvkgH"><img src="https://farm6.staticflickr.com/5742/21212836579_666164ae96_n.jpg" alt="" />
+              <p>
+                Tokyo
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height2">
+            <a href="https://flic.kr/p/yjpaFJ"><img src="https://farm6.staticflickr.com/586/21211633660_01dcb4817c_n.jpg" alt="" />
+              <p>
+                Tokyo
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item">
+            <a href="https://flic.kr/p/yyGAk1"><img src="https://farm6.staticflickr.com/5798/21373464406_41eaa0076f_n.jpg" alt="" />
+              <p>
+                Tokyo
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height2">
+            <a href="https://flic.kr/p/obzLPw"><img src="https://farm6.staticflickr.com/5475/14559603324_782e8de3c6_n.jpg" alt="" />
+              <p>
+                Austin
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height3">
+            <a href="https://flic.kr/p/obpQU2"><img src="https://farm6.staticflickr.com/2903/14557665921_120123eea2_n.jpg" alt="" />
+              <p>
+                San Francisco
+              </p>
+            </a>
+
+          </div>
+          <div class="grid-item grid-item--height2">
+            <a href="https://flic.kr/p/o9FYwb"><img src="https://farm6.staticflickr.com/3912/14538180366_2f99c50e6a_n.jpg" alt="" />
+              <p>
+                Portland
+              </p>
+            </a>
+
           </div>
         </div>
       </div>
-      <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
-      <script src="/path/to/masonry.pkgd.min.js"></script>
+      <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+      <script src="masonry-docs.min.js"></script>
+      <!-- <script src="masonry.pkgd.min.js"></script> -->
+      <script src="classie.js"></script>
+  		<script src="AnimOnScroll.js"></script>
       <script src="script.js"></script>
   </body>
 
