--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                       <li><a href="lab4_dom_manipulation/dom_manipulation_starting.html">Homework 5</a></li>
                       <li><a href="homework_5/gettysburg_address/index.html">Homework 6</a></li>
                       <li><a href="final_project_new/index.html">Final Project</a></li>
+                      <li><a href="photo_project/index.html">Portfolio</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
                       <li><a href="">Classwork 2</a></li>
