--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="container">
+      <div class="overlay">
+        Aspiring Front-end Web Developer
+      </div>
+    </div>
+    
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
+
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="windows.jpg">
+
+      </div>
+      <div class="item">
+        <img src="brick.jpg">
+      </div>
+      <div class="item">
+        <img src="water.jpg">
+      </div>
+
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <br>
+  <div class="container">
+          <div class="row">
+              <div class="col-xs-6 col-md-4"><i class="fa fa-user fa-5x"></i><h2>About Me</h2>
+                <p> Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                <!-- <a href="#">View details » </a> -->
+                </p>
+              </div>
+              <div class="col-xs-6 col-md-4"><i class="fa fa-linkedin-square fa-5x"></i><h2>LinkedIn</h2>
+                <p> Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                <!-- <a href="#">View details » </a> -->
+                </p>
+              </div>
+              <div class="col-xs-6 col-md-4"><i class="fa fa-github fa-5x"><a href="https://github.com/jecheng"></a></i><h2>GitHub</h2>
+                <p> I took a Front-End Web Development course at General Assembly SF between December 2015 and February 2016. During this time, I learned how to use GitHub.
+                <!-- <a href="#">View details » </a> -->
+                </p>
+              </div>
+          </div>
+        <hr>
+        <div class="projects">
+          <h1>Projects</h1>
+        </div>
+        <hr>
+        <div class="row">
+              <div class="col-md-8"><h1>Pinterest</h1>
+                <p>
+                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                </p>
+              </div>
+              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
+        </div>
+        <hr>
+        <div class="row">
+              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
+              <div class="col-md-8"><h1>Map</h1>
+                <p>
+                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                </p>
+              </div>
+        </div>
+        <hr>
+        <div class="row">
+              <div class="col-md-8"><h1>Search</h1>
+                <p>
+                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                </p>
+              </div>
+              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
+        </div>
+        <hr>
+        <footer>&copy; Jennifer Cheng 2016</footer>
+        <br>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js">
+    </script>
+      <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="style.js"></script>
   </body>
 </html>
