--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -8,17 +8,22 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat+Subrayada:700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-    <title>Portfolio</title>
+    <title>Jen Cheng</title>
   </head>
   <body>
     <div class="container">
       <div class="overlay">
-        Aspiring Front-end Web Developer
+        <div class="title-uppercase">
+          Aspiring Front-end Web Developer
+        </div>
+        <h6></h6>
       </div>
+
     </div>
-    
+
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
 
@@ -57,52 +62,54 @@
   <br>
   <div class="container">
           <div class="row">
-              <div class="col-xs-6 col-md-4"><i class="fa fa-user fa-5x"></i><h2>About Me</h2>
+              <!-- <div class="col-xs-6 col-md-4"><i class="fa fa-user fa-5x"></i><h2>About Me</h2>
                 <p> Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                <!-- <a href="#">View details » </a> -->
+                </p>
+              </div> -->
+              <div class="col-xs-6 col-md-6"><a href="https://www.linkedin.com/in/jennifercheng001" target="_blank"><i class="fa fa-linkedin-square fa-5x"></i></a><h2>LinkedIn</h2>
+                <p> By day, I traverse downtown San Francisco as a Business Intelligence Analyst. By night, I moonlight as an aspiring front-end web developer.
                 </p>
               </div>
-              <div class="col-xs-6 col-md-4"><i class="fa fa-linkedin-square fa-5x"></i><h2>LinkedIn</h2>
-                <p> Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                <!-- <a href="#">View details » </a> -->
-                </p>
-              </div>
-              <div class="col-xs-6 col-md-4"><i class="fa fa-github fa-5x"><a href="https://github.com/jecheng"></a></i><h2>GitHub</h2>
-                <p> I took a Front-End Web Development course at General Assembly SF between December 2015 and February 2016. During this time, I learned how to use GitHub.
-                <!-- <a href="#">View details » </a> -->
+              <div class="col-xs-6 col-md-6"><a href="https://github.com/jecheng" target="_blank"><i class="fa fa-github fa-5x"></i></a><h2>GitHub</h2>
+                <p> I took a Front-End Web Development course at General Assembly SF between December 2015 and February 2016. During this time, I learned how to use GitHub. Check out my profile!
                 </p>
               </div>
           </div>
         <hr>
         <div class="projects">
-          <h1>Projects</h1>
+          Projects
         </div>
         <hr>
         <div class="row">
-              <div class="col-md-8"><h1>Pinterest</h1>
+              <div class="col-md-8">
+                <h1>Travel Junkie
+                      <span class="muted">
+                      Library Used: Masonry
+                      </span>
+                </h1>
+                <p>
+                  During my free time, I love to travel and take pictures with my Nikon D5000. Inspired by Pinterest, this is a pinboard dedicated to the photos I've taken during my trip abroad.
+                </p>
+              </div>
+              <div class="col-md-4"><a href="photo_project/index.html" target="_blank"><img src="photopins.png" class="img-thumbnail"></a></div>
+        </div>
+        <hr>
+        <div class="row">
+              <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
+              <div class="col-md-8"><h1>Mapper</h1>
                 <p>
                   Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
                 </p>
               </div>
-              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
         </div>
         <hr>
         <div class="row">
-              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
-              <div class="col-md-8"><h1>Map</h1>
+              <div class="col-md-8"><h1>Seek</h1>
                 <p>
                   Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
                 </p>
               </div>
-        </div>
-        <hr>
-        <div class="row">
-              <div class="col-md-8"><h1>Search</h1>
-                <p>
-                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                </p>
-              </div>
-              <div class="col-md-4"><img src="..." class="img-thumbnail"></div>
+              <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
         </div>
         <hr>
         <footer>&copy; Jennifer Cheng 2016</footer>
