--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -96,17 +96,27 @@
         <hr>
         <div class="row">
               <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
-              <div class="col-md-8"><h1>Mapper</h1>
+              <div class="col-md-8">
+                <h1>Project Mapper Coming Soon
+                    <span class="muted">
+                    Api to be used: Google Maps
+                    </span>
+              </h1>
                 <p>
-                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                  Marker on a map of all the places I've been.
                 </p>
               </div>
         </div>
         <hr>
         <div class="row">
-              <div class="col-md-8"><h1>Seek</h1>
+              <div class="col-md-8">
+                <h1>Project BeerFinder Coming Soon
+                  <span class="muted">
+                  Api to be used: Foursquare
+                  </span>
+            </h1>
                 <p>
-                  Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                  Search engine to find beer in the area.
                 </p>
               </div>
               <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
