--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -99,7 +99,7 @@
               <div class="col-md-8">
                 <h1>Project Mapper Coming Soon
                     <span class="muted">
-                    Api to be used: Google Maps
+                    Api: Google Maps
                     </span>
               </h1>
                 <p>
@@ -112,7 +112,7 @@
               <div class="col-md-8">
                 <h1>Project BeerFinder Coming Soon
                   <span class="muted">
-                  Api to be used: Foursquare
+                  Api: Foursquare
                   </span>
             </h1>
                 <p>
