--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -97,26 +97,26 @@
         <div class="row">
               <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
               <div class="col-md-8">
-                <h1>Project Mapper Coming Soon
+                <h1>Globe Trotter
                     <span class="muted">
                     Api: Google Maps
                     </span>
               </h1>
                 <p>
-                  Marker on a map of all the places I've been.
+                  COMING SOON.Map of all the places I've been.
                 </p>
               </div>
         </div>
         <hr>
         <div class="row">
               <div class="col-md-8">
-                <h1>Project BeerFinder Coming Soon
+                <h1>Beer Finder
                   <span class="muted">
                   Api: Foursquare
                   </span>
             </h1>
                 <p>
-                  Search engine to find beer in the area.
+                  COMING SOON..a search engine to find beer in the area.
                 </p>
               </div>
               <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
