--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -103,7 +103,7 @@
                     </span>
               </h1>
                 <p>
-                  COMING SOON.Map of all the places I've been.
+                  COMING SOON...Map of all the places I've been.
                 </p>
               </div>
         </div>
@@ -116,7 +116,7 @@
                   </span>
             </h1>
                 <p>
-                  COMING SOON..a search engine to find beer in the area.
+                  COMING SOON...A search engine to find beer in the area.
                 </p>
               </div>
               <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
