--- a/newportfolio/index.html
+++ b/newportfolio/index.html
@@ -95,7 +95,7 @@
         </div>
         <hr>
         <div class="row">
-              <div class="col-md-4"><div class="img-thumbnail">coming soon!</div></div>
+              <div class="col-md-4"><a href="map/index.html" target="_blank" class="img-thumbnail">coming soon!</a></div>
               <div class="col-md-8">
                 <h1>Globe Trotter
                     <span class="muted">
