--- a/newportfolio/map/index.html
+++ b/newportfolio/map/index.html
@@ -8,7 +8,9 @@
 
   </head>
   <body>
-
+      <div id="floating-panel">
+        <button id="drop" onclick="drop()">Drop Markers</button>
+      </div>
       <div id="map"></div>
 
 
